scripts/kubernetes/manifests/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bassa-ingress
  namespace: bassa
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
      - path: /api/
        backend:
          serviceName: api
          servicePort: 5000
      - path: /prom
        backend:
          serviceName: prometheus
          servicePort: 8080   
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: 3000
